# potree-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  serve.js
assets/heidentor/: dl.sh
examples/: read_native.rs  read_wasm.rs
src/: hierarchy.rs  lib.rs  metadata.rs  point.rs  point_cloud.rs  prelude.rs
src/octree/: aabb.rs  loader.rs  mod.rs  node.rs  point_attributes.rs  snapshot.rs
src/resource/: ehttp.rs  ehttp_local.rs  file.rs  hybrid.rs  mod.rs  reqwest.rs
wasm/: index.html
